# auto-server

./: .gitignore  README.md
.github/workflows/: rust.yml
auto-server/: app.py  auto-server.pyproj  auto_WeChat.py  auto_ip_addr.py  auto_mouse.py  auto_mouse_keyboard.py  auto_server.py  auto_server.spec  globals.py  ip_addr.py  monitor.py  monitors.py  wechat.py  window.py
auto-server-old/: README.md  auto-server.sln
auto-server-old/auto-server/: global_params.py  window.py
auto-service/: Cargo.toml
auto-service/crates/auto-client/: Cargo.toml
auto-service/crates/auto-client/src/: flags.rs  main.rs
auto-service/crates/auto-server/: Cargo.toml
auto-service/crates/auto-server/src/: flags.rs  main.rs
auto-service/crates/auto-services/: Cargo.toml
auto-service/crates/auto-services/src/: main.rs
auto-service/crates/common/src/: command.rs  services.rs
auto-service/crates/ip-service/: Cargo.toml
auto-service/crates/ip-service/src/: ip.rs  ip_client.rs  ip_common.rs  ip_server.rs  lib.rs
auto-service/crates/service-protos/: Cargo.toml  build.rs
auto-service/crates/service-protos/protos/ip/: ip.proto
auto-service/crates/service-protos/src/: lib.rs
auto-service/crates/services/: Cargo.toml
auto-service/crates/services/src/: main.rs
auto-wechat/auto-server/: auto-WeChat.pyproj  auto_WeChat.py  monitors.py
